# Fraud-Detection-Multi-Agent-Sytem

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: release-notes-v0.1.0.md
backend/: .env.example  Dockerfile  Dockerfile.lambda  README.md  backend-infrastructure.yaml  pyproject.toml  requirements.txt  samconfig.toml  setup-openai-key.sh  template.yaml
backend/app/: main.py
backend/app/agents/: arbiter.py  behavioral_pattern.py  debate.py  evidence_aggregation.py  explainability.py  policy_rag.py  threat_intel.py  transaction_context.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  errors.py  llm.py  logging.py
backend/app/data/: loader.py  s3_loader.py
backend/app/orchestration/: graph.py  prompts.py  state.py
backend/app/prompts/: __init__.py  loader.py
backend/app/prompts/es/: base.yml  debate.yml  explainability.yml
backend/app/rag/: embedder.py  index_policies.py  sqlite_shim.py  vector_store.py
backend/app/storage/: dynamodb.py  interfaces.py  local_json.py
backend/app/web/: __init__.py  allowlist.py  governed_search.py
backend/tests/: test_arbiter.py  test_context_agent.py  test_hitl.py  test_ingest.py
frontend/: .env.example  Dockerfile  frontend-infrastructure.yaml  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  router.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AuditTimeline.tsx  ConfidenceBar.tsx  EvidenceList.tsx  GlobalLoadingIndicator.tsx  SignalsChips.tsx
frontend/src/pages/: HitlQueue.tsx  TransactionDetail.tsx  (+1 more)
